update to 2.2.0
更新groupId
old:net.guerlab
new:net.guerlab.spring

更新依赖版本
1.spring cloud >> Finchley.SR2
2.spring boot >> 2.1.0.RELEASE
3.springfox >> 2.9.2
4.druid >> 1.1.10
5.pagehelper-spring-boot-starter >> 1.2.9
6.pagehelper >> 5.1.7
7.mapper-spring-boot-starter >> 2.0.4
8.mapper >> 1.0.5
9.jjwt >> 0.9.1

删除依赖
1.guerlab-spring-mybatis-starter >>
com.alibaba:druid-spring-boot-starter

新增依赖
1.guerlab-spring-commons >> javax.xml.bind:jaxb-api  用于支持java9+版本
2.guerlab-spring-commons >>
com.fasterxml.jackson.datatype:jackson-datatype-jsr310

删除jar包
1.guerlab-spring-cloud-starter
2.guerlab-spring-mysql-starter

更新
1.删除net.guerlab.spring.commons.jackson.serializer.NumberStringSerializer
2.net.guerlab.spring.commons.autoconfigure.ObjectMapperAutoconfigure的数值类型格式化调整为ToStringSerializer
3.net.guerlab.spring.commons.autoconfigure.ObjectMapperAutoconfigure删除对objectMapper的自动设置，调整为仅注册module
4.net.guerlab.spring.redis.autoconfigure.RedisTemplateAutoconfigure调整objectMapper的配置方式